Nav Bar Support, All Pages, Spacing Fixed

--- a/src/main/styles/main.scss
+++ b/src/main/styles/main.scss
@@ -3,3 +3,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 
+.navbar-nav > li{
+  padding-left:50px;
+  padding-right:50px;
+}
